--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-"keywords": [
-  "vite",
-  "react",
-  "js",
-  "ts",
-  "tailwind",
-  "jsx",
-  "tsx",
-  "boilerplate",
-  "javascript",
-  "typescript",
-  "tailwindcss",
-  "vite-plugin",
-  "react-app",
-  "front-end",
-  "web-development",
-  "css-framework",
-  "npm-package",
-  "starter-template",
-  "react-starter",
-  "tailwind-starter",
-  "vite-starter",
-  "react-tailwind"
-],
+  "keywords": [
+    "vite",
+    "react",
+    "js",
+    "ts",
+    "tailwind",
+    "jsx",
+    "tsx",
+    "boilerplate",
+    "javascript",
+    "typescript",
+    "tailwindcss",
+    "vite-plugin",
+    "react-app",
+    "front-end",
+    "web-development",
+    "css-framework",
+    "npm-package",
+    "starter-template",
+    "react-starter",
+    "tailwind-starter",
+    "vite-starter",
+    "react-tailwind",
+    "shadcn",
+    "ui"
+  ],
   "author": "Rapto",
   "license": "MIT",
   "description": "Installer for Vite + TailwindCSS",
@@ -43,7 +45,6 @@
     "nodemon": "^3.1.9",
     "prompts": "^2.4.2",
     "rewrap": "file:",
-    "rewrap-vite-tailwind": "file:",
     "rewrap-vitejs-tailwind": "file:"
   }
 }
